Use comma as html meta keyword separator
As per
https://developer.mozilla.org/en-US/docs/Web/HTML/Element/meta/name this
it the correct character to separate the keywords listed there.

I also updated some of the translation strings (but not those with
non-latin character sets, sorry).

--- a/locale/ar/LC_MESSAGES/django.po
+++ b/locale/ar/LC_MESSAGES/django.po
@@ -4267,7 +4267,7 @@ msgid "Sorry, but the requested page could not be found."
 msgstr "المعذرة، و لكن لا يمكن العثور على الصفحة المطلوية."
 
 #: seahub/templates/base.html:8 seahub/templates/base_for_react.html:9
-msgid "File Collaboration Team Organization"
+msgid "File, Collaboration, Team, Organization"
 msgstr "تنظيم فريق اشتراك ملف"
 
 #: seahub/templates/base.html:39
