--- a/locale/ru/LC_MESSAGES/django.po
+++ b/locale/ru/LC_MESSAGES/django.po
@@ -4269,7 +4269,7 @@ msgid "Sorry, but the requested page could not be found."
 msgstr "Извините, но запрошенная страница не может быть найдена."
 
 #: seahub/templates/base.html:8 seahub/templates/base_for_react.html:9
-msgid "File Collaboration Team Organization"
+msgid "File, Collaboration, Team, Organization"
 msgstr "Совместный файл сообщества"
 
 #: seahub/templates/base.html:39
