--- a/locale/ca/LC_MESSAGES/django.po
+++ b/locale/ca/LC_MESSAGES/django.po
@@ -4239,7 +4239,7 @@ msgid "Sorry, but the requested page could not be found."
 msgstr "No s'ha pogut localitzar la pàgina sol·licitada."
 
 #: seahub/templates/base.html:8 seahub/templates/base_for_react.html:9
-msgid "File Collaboration Team Organization"
+msgid "File, Collaboration, Team, Organization"
 msgstr "Equip d'organització de fitxers"
 
 #: seahub/templates/base.html:39
