--- a/locale/el/LC_MESSAGES/django.po
+++ b/locale/el/LC_MESSAGES/django.po
@@ -4243,7 +4243,7 @@ msgid "Sorry, but the requested page could not be found."
 msgstr "Συγγνώμη, αλλά η σελίδα που ζητήσατε δεν μπορεί να βρεθεί."
 
 #: seahub/templates/base.html:8 seahub/templates/base_for_react.html:9
-msgid "File Collaboration Team Organization"
+msgid "File, Collaboration, Team, Organization"
 msgstr ""
 
 #: seahub/templates/base.html:39
