--- a/locale/es/LC_MESSAGES/django.po
+++ b/locale/es/LC_MESSAGES/django.po
@@ -4245,8 +4245,8 @@ msgid "Sorry, but the requested page could not be found."
 msgstr "La página solicitada no pudo ser encontrada."
 
 #: seahub/templates/base.html:8 seahub/templates/base_for_react.html:9
-msgid "File Collaboration Team Organization"
-msgstr "Organización de equipo de colaboraores"
+msgid "File, Collaboration, Team, Organization"
+msgstr "Archivo, Colaboración, Equipo, Organización"
 
 #: seahub/templates/base.html:39
 msgid "Side Nav Menu"
