--- a/locale/fi/LC_MESSAGES/django.po
+++ b/locale/fi/LC_MESSAGES/django.po
@@ -4242,8 +4242,8 @@ msgid "Sorry, but the requested page could not be found."
 msgstr "Pahoittelut, mutta pyytämääsi sivua ei löydy."
 
 #: seahub/templates/base.html:8 seahub/templates/base_for_react.html:9
-msgid "File Collaboration Team Organization"
-msgstr "Tiedosto Yhteistyö Tiimi Organisaatio"
+msgid "File, Collaboration, Team, Organization"
+msgstr "Tiedosto, Yhteistyö, Tiimi, Organisaatio"
 
 #: seahub/templates/base.html:39
 msgid "Side Nav Menu"
