--- a/locale/fr/LC_MESSAGES/django.po
+++ b/locale/fr/LC_MESSAGES/django.po
@@ -4266,8 +4266,8 @@ msgid "Sorry, but the requested page could not be found."
 msgstr "Désolé, mais la page demandée est introuvable."
 
 #: seahub/templates/base.html:8 seahub/templates/base_for_react.html:9
-msgid "File Collaboration Team Organization"
-msgstr "Organisation des fichiers de collaboration d'équipe"
+msgid "File, Collaboration, Team, Organization"
+msgstr "Fichier, Collaboration, Équipe, Organisation"
 
 #: seahub/templates/base.html:39
 msgid "Side Nav Menu"
