--- a/locale/hu/LC_MESSAGES/django.po
+++ b/locale/hu/LC_MESSAGES/django.po
@@ -4247,8 +4247,8 @@ msgid "Sorry, but the requested page could not be found."
 msgstr "Sajnáljuk, a kért oldal nem található."
 
 #: seahub/templates/base.html:8 seahub/templates/base_for_react.html:9
-msgid "File Collaboration Team Organization"
-msgstr "Fájlmegosztó szervezet "
+msgid "File, Collaboration, Team, Organization"
+msgstr "Fájl, Együttműködés, Csapat, Szervezés"
 
 #: seahub/templates/base.html:39
 msgid "Side Nav Menu"
