--- a/locale/pl/LC_MESSAGES/django.po
+++ b/locale/pl/LC_MESSAGES/django.po
@@ -4257,8 +4257,8 @@ msgid "Sorry, but the requested page could not be found."
 msgstr "Niestety, żądana strona nie została odnaleziona."
 
 #: seahub/templates/base.html:8 seahub/templates/base_for_react.html:9
-msgid "File Collaboration Team Organization"
-msgstr "praca grupowa organizacja współpraca"
+msgid "File, Collaboration, Team, Organization"
+msgstr "Plik, Współpraca, Zespół, Organizacja"
 
 #: seahub/templates/base.html:39
 msgid "Side Nav Menu"
