--- a/locale/uk/LC_MESSAGES/django.po
+++ b/locale/uk/LC_MESSAGES/django.po
@@ -4257,7 +4257,7 @@ msgid "Sorry, but the requested page could not be found."
 msgstr "Вибачте, але такої сторінки не знайдено."
 
 #: seahub/templates/base.html:8 seahub/templates/base_for_react.html:9
-msgid "File Collaboration Team Organization"
+msgid "File, Collaboration, Team, Organization"
 msgstr "Спільний файл команди спільноти"
 
 #: seahub/templates/base.html:39
