--- a/locale/vi/LC_MESSAGES/django.po
+++ b/locale/vi/LC_MESSAGES/django.po
@@ -4230,7 +4230,7 @@ msgid "Sorry, but the requested page could not be found."
 msgstr "Không thể tìm thấy trang được yêu cầu"
 
 #: seahub/templates/base.html:8 seahub/templates/base_for_react.html:9
-msgid "File Collaboration Team Organization"
+msgid "File, Collaboration, Team, Organization"
 msgstr "Tổ chức file phối hợp Group"
 
 #: seahub/templates/base.html:39
