--- a/locale/zh_TW/LC_MESSAGES/django.po
+++ b/locale/zh_TW/LC_MESSAGES/django.po
@@ -4237,7 +4237,7 @@ msgid "Sorry, but the requested page could not be found."
 msgstr "對不起，你瀏覽的頁面不存在。"
 
 #: seahub/templates/base.html:8 seahub/templates/base_for_react.html:9
-msgid "File Collaboration Team Organization"
+msgid "File, Collaboration, Team, Organization"
 msgstr "檔案 合作 團隊 團體"
 
 #: seahub/templates/base.html:39
