--- a/media/locales/cs/seafile-editor.json
+++ b/media/locales/cs/seafile-editor.json
@@ -193,7 +193,7 @@
           "Escape_table": "Opustit tabulku"
         }
       }, {
-        "shortcutType": "Formula shortcuts",
+        "shortcutType": "Zkratky vzorečku",
         "shortcutData": {
           "Insert_Formula": "Insert Formula"
         }
