--- a/media/locales/fr/seafile-editor.json
+++ b/media/locales/fr/seafile-editor.json
@@ -60,7 +60,7 @@
   "internal_link_desc": "Un lien interne est un lien vers un fichier ou un dossier accessible en lecture par un utilisateur.",
   "share": "Partager",
   "share_link": "Lien de téléchargement",
-  "generate": "Générer",
+  "generate": "Créer",
   "add_password_protection": "Ajouter un mot de passe",
   "password": "Mot de passe",
   "at_least_8_characters": "Au moins 8 caractères",
