--- a/locale/fr/LC_MESSAGES/django.po
+++ b/locale/fr/LC_MESSAGES/django.po
@@ -25,7 +25,7 @@
 # Daniel Pan <daniel.pan@seafile.com>, 2015
 # LowMemory, 2016
 # MathieuP, 2014-2015,2019
-# chadek <meyer.fabrice@gmx.fr>, 2021
+# chadek <meyer.fabrice@gmx.fr>, 2021-2022
 # Nicolas Delvaux <contact@nicolas-delvaux.org>, 2015
 # Pierrick B. <pierrick.brun@gmail.com>, 2013
 # Pierrick B. <pierrick.brun@gmail.com>, 2013-2014
@@ -36,9 +36,9 @@ msgid ""
 msgstr ""
 "Project-Id-Version: seahub\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2022-01-21 16:50+0800\n"
-"PO-Revision-Date: 2022-01-19 07:23+0000\n"
-"Last-Translator: Gaspard <info@widelinkpc.be>\n"
+"POT-Creation-Date: 2022-02-11 11:51+0800\n"
+"PO-Revision-Date: 2022-02-04 10:39+0000\n"
+"Last-Translator: chadek <meyer.fabrice@gmx.fr>\n"
 "Language-Team: French (http://www.transifex.com/haiwen/seahub/language/fr/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -4221,8 +4221,8 @@ msgstr "Aucun résultat trouvé"
 #, python-format
 msgid "%(total)s result"
 msgid_plural "%(total)s results"
-msgstr[0] ""
-msgstr[1] ""
+msgstr[0] "%(total)s résultat"
+msgstr[1] "%(total)s résultats"
 
 #: seahub/search/templates/search_results.html:63
 msgid "Directory icon"
@@ -4410,7 +4410,7 @@ msgstr "Désolé, mais la page demandée est introuvable."
 
 #: seahub/templates/base.html:8 seahub/templates/base_for_react.html:9
 msgid "File, Collaboration, Team, Organization"
-msgstr ""
+msgstr "Fichier, Collaboration, Équipe, Organisation"
 
 #: seahub/templates/base.html:41
 msgid "Side Nav Menu"
