--- a/locale/fr/LC_MESSAGES/djangojs.po
+++ b/locale/fr/LC_MESSAGES/djangojs.po
@@ -15,14 +15,14 @@
 # LowMemory, 2016
 # MathieuP, 2019
 # MathieuP, 2019
-# chadek <meyer.fabrice@gmx.fr>, 2021
+# chadek <meyer.fabrice@gmx.fr>, 2021-2022
 # Ralf Dyllick <rdb@datamate.org>, 2021
 msgid ""
 msgstr ""
 "Project-Id-Version: seahub\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2022-01-21 16:50+0800\n"
-"PO-Revision-Date: 2022-01-21 08:51+0000\n"
+"POT-Creation-Date: 2022-02-11 11:51+0800\n"
+"PO-Revision-Date: 2022-02-11 03:55+0000\n"
 "Last-Translator: imwhatiam <imwhatiam123@gmail.com>\n"
 "Language-Team: French (http://www.transifex.com/haiwen/seahub/language/fr/)\n"
 "MIME-Version: 1.0\n"
@@ -292,7 +292,7 @@ msgstr "Description"
 #: frontend/src/components/dialog/create-repo-dialog.js:267
 #: frontend/src/components/dialog/create-tag-dialog.js:114
 #: frontend/src/components/dialog/delete-dialog.js:32
-#: frontend/src/components/dialog/delete-repo-dialog.js:52
+#: frontend/src/components/dialog/delete-repo-dialog.js:69
 #: frontend/src/components/dialog/dismiss-group-dialog.js:33
 #: frontend/src/components/dialog/generate-share-link.js:463
 #: frontend/src/components/dialog/import-members-dialog.js:60
@@ -644,7 +644,7 @@ msgstr "Voulez-vous vraiment supprimer ce compte ?"
 #: frontend/src/components/dialog/custom-permission/custom-permission-editor.js:184
 #: frontend/src/components/dialog/custom-permission/custom-permission-item.js:60
 #: frontend/src/components/dialog/delete-dialog.js:33
-#: frontend/src/components/dialog/delete-repo-dialog.js:53
+#: frontend/src/components/dialog/delete-repo-dialog.js:70
 #: frontend/src/components/dialog/dismiss-group-dialog.js:34
 #: frontend/src/components/dialog/file-participant-dialog.js:43
 #: frontend/src/components/dialog/generate-share-link.js:456
@@ -1123,16 +1123,16 @@ msgstr "La description est requise"
 #: frontend/src/components/dialog/custom-permission/custom-permission-editor.js:113
 #: frontend/src/components/dialog/custom-permission/list-custom-permissions.js:23
 msgid "Add permission"
-msgstr ""
+msgstr "Ajouter un droit"
 
 #: frontend/src/components/dialog/custom-permission/custom-permission-editor.js:113
 msgid "Edit permission"
-msgstr ""
+msgstr "Éditer un droit"
 
 #: frontend/src/components/dialog/custom-permission/custom-permission-editor.js:138
 #: frontend/src/components/dialog/custom-permission/list-custom-permissions.js:30
 msgid "Permission name"
-msgstr ""
+msgstr "Nom du droit"
 
 #: frontend/src/components/dialog/custom-permission/custom-permission-editor.js:151
 #: frontend/src/components/toolbar/dir-operation-toolbar.js:187
@@ -1190,7 +1190,7 @@ msgstr "Modifier"
 msgid ""
 "Modify includes modify file, create file and folder, move/rename file and "
 "folder"
-msgstr ""
+msgstr "Modifier inclut la modification de fichier, la création de fichier et dossier, le déplacement ou renommage de fichier et dossier"
 
 #: frontend/src/components/dialog/custom-permission/custom-permission-editor.js:178
 #: frontend/src/components/dialog/internal-link-dialog.js:77
@@ -1208,7 +1208,7 @@ msgstr "Copier"
 
 #: frontend/src/components/dialog/custom-permission/custom-permission-editor.js:190
 msgid "Preview online"
-msgstr ""
+msgstr "Prévisualisation en ligne"
 
 #: frontend/src/components/dialog/custom-permission/custom-permission-editor.js:196
 msgid "Generate share link"
@@ -1248,12 +1248,18 @@ msgstr "Supprimer le dossier"
 msgid "Are you sure to delete"
 msgstr "Êtes-vous certain de vouloir supprimer ?"
 
-#: frontend/src/components/dialog/delete-repo-dialog.js:40
+#: frontend/src/components/dialog/delete-repo-dialog.js:52
 #, javascript-format
 msgid "Are you sure you want to delete %s ?"
 msgstr "Êtes-vous certain de vouloir supprimer %s ?"
 
-#: frontend/src/components/dialog/delete-repo-dialog.js:47
+#: frontend/src/components/dialog/delete-repo-dialog.js:55
+msgid ""
+"This library has been shared to {user_amount} user(s) and {group_amount} "
+"group(s)."
+msgstr ""
+
+#: frontend/src/components/dialog/delete-repo-dialog.js:63
 #: frontend/src/components/dialog/org-delete-repo-dialog.js:32
 #: frontend/src/components/dialog/sysadmin-dialog/sysadmin-delete-repo-dialog.js:32
 #: frontend/src/pages/sys-admin/admin-logs/operation-logs.js:88
@@ -2324,7 +2330,7 @@ msgstr "Partage avec un groupe"
 
 #: frontend/src/components/dialog/share-dialog.js:147
 msgid "Custom sharing permissions"
-msgstr ""
+msgstr "Personnaliser des droits de partage"
 
 #: frontend/src/components/dialog/share-dialog.js:163
 msgid "Share to other server"
@@ -3240,7 +3246,7 @@ msgstr "Pas de membre"
 #: frontend/src/components/select-editor/select-editor.js:58
 #: frontend/src/components/select-editor/select-editor.js:63
 msgid "Add custom permission"
-msgstr ""
+msgstr "Ajouter des droits personnaliser"
 
 #: frontend/src/components/select-editor/sysadmin-user-role-editor.js:19
 msgid "Default"
@@ -5868,7 +5874,7 @@ msgstr "Aucun journal d'accès aux fichiers"
 
 #: frontend/src/translate.js:27
 msgid "Save Selected Items"
-msgstr ""
+msgstr "Enregistrer la sélection"
 
 #: frontend/src/user-notifications.js:125
 msgid "Mark all read"
@@ -5885,7 +5891,7 @@ msgstr "Fichier journaux"
 
 #: frontend/src/utils/text-translation.js:24
 msgid "Convert with ONLYOFFICE"
-msgstr ""
+msgstr "Convertir avec ONLYOFFICE"
 
 #: frontend/src/utils/utils.js:420
 msgid "Admin access"
