--- a/locale/ru/LC_MESSAGES/djangojs.po
+++ b/locale/ru/LC_MESSAGES/djangojs.po
@@ -5,14 +5,14 @@
 # Translators:
 # Denis Baranov <baranov@itlibertas.com>, 2015
 # Michael Klimenko <michaelkl@mail.ru>, 2015
-# Vladimir <pash.vld@gmail.com>, 2015-2022
+# Vladimir <pash.vld@gmail.com>, 2015-2023
 msgid ""
 msgstr ""
 "Project-Id-Version: seahub\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2023-02-13 15:27+0800\n"
+"POT-Creation-Date: 2023-02-15 17:52+0800\n"
 "PO-Revision-Date: 2015-05-09 05:28+0000\n"
-"Last-Translator: Vladimir <pash.vld@gmail.com>, 2015-2022\n"
+"Last-Translator: Vladimir <pash.vld@gmail.com>, 2015-2023\n"
 "Language-Team: Russian (http://www.transifex.com/haiwen/seahub/language/ru/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -113,84 +113,84 @@ msgstr "Черновик"
 
 #: frontend/src/components/common/notice-item.js:253
 msgid "{user} created file {fileName} in library {libraryName}."
-msgstr ""
+msgstr "{user} создал файл {fileName} в библиотеке {libraryName}."
 
 #: frontend/src/components/common/notice-item.js:253
 msgid ""
 "{user} created file {fileName} and {fileCount} other file(s) in library "
 "{libraryName}."
-msgstr ""
+msgstr "{user} создал файл {fileName} и {fileCount} других файлов в библиотеке {libraryName}."
 
 #: frontend/src/components/common/notice-item.js:256
 msgid "{user} deleted file {fileName} in library {libraryName}."
-msgstr ""
+msgstr "{user} удалил файл {fileName} в библиотеке {libraryName}."
 
 #: frontend/src/components/common/notice-item.js:256
 msgid ""
 "{user} deleted file {fileName} and {fileCount} other file(s) in library "
 "{libraryName}."
-msgstr ""
+msgstr "{user} удалил файл {fileName} и {fileCount} других файлов в библиотеке {libraryName}."
 
 #: frontend/src/components/common/notice-item.js:260
 msgid "{user} restored file {fileName} in library {libraryName}."
-msgstr ""
+msgstr "{user} восстановил файл {fileName} в библиотеке {libraryName}."
 
 #: frontend/src/components/common/notice-item.js:263
 msgid "{user} renamed file {oldFileName} {fileName} in library {libraryName}."
-msgstr ""
+msgstr "{user} переименовал файл {oldFileName} {fileName} в библиотеке {libraryName}."
 
 #: frontend/src/components/common/notice-item.js:267
 msgid "{user} moved file {fileName} in library {libraryName}."
-msgstr ""
+msgstr "{user} переместил файл {fileName} в библиотеке {libraryName}."
 
 #: frontend/src/components/common/notice-item.js:267
 msgid ""
 "{user} moved file {fileName} and {fileCount} other file(s) in library "
 "{libraryName}."
-msgstr ""
+msgstr "{user} переместил файл {fileName} и {fileCount} других файлов в библиотеке {libraryName}."
 
 #: frontend/src/components/common/notice-item.js:270
 msgid "{user} updated file {fileName} in library {libraryName}."
-msgstr ""
+msgstr "{user} обновил файл {fileName} в библиотеке {libraryName}."
 
 #: frontend/src/components/common/notice-item.js:282
 msgid "{user} created folder {folderName} in library {libraryName}."
-msgstr ""
+msgstr "{user} создал папку {folderName} в библиотеке {libraryName}."
 
 #: frontend/src/components/common/notice-item.js:282
 msgid ""
 "{user} created folder {folderName} and {folderCount} other folder(s) in "
 "library {libraryName}."
-msgstr ""
+msgstr "{user} создал папку {folderName} и {folderCount} других папок в библиотеке {libraryName}."
 
 #: frontend/src/components/common/notice-item.js:285
 msgid "{user} deleted folder {folderName} in library {libraryName}."
-msgstr ""
+msgstr "{user} удалил папку {folderName} в библиотеке {libraryName}."
 
 #: frontend/src/components/common/notice-item.js:285
 msgid ""
 "{user} deleted folder {folderName} and {folderCount} other folder(s) in "
 "library {libraryName}."
-msgstr ""
+msgstr "{user} удалил папку {folderName} и {folderCount} других папок в библиотеке {libraryName}."
 
 #: frontend/src/components/common/notice-item.js:289
 msgid "{user} restored folder {folderName} in library {libraryName}."
-msgstr ""
+msgstr "{user} восстановил папку {folderName} в библиотеке {libraryName}."
 
 #: frontend/src/components/common/notice-item.js:292
 msgid ""
 "{user} renamed folder {oldFolderName} {folderName} in library {libraryName}."
-msgstr ""
+msgstr "{user} переименовал папку {oldFolderName} {folderName} в библиотеке {libraryName}."
 
 #: frontend/src/components/common/notice-item.js:296
 msgid "{user} moved folder {folderName} in library {libraryName}."
-msgstr ""
+msgstr "{user} переместил папку {folderName} в библиотеке {libraryName}."
 
 #: frontend/src/components/common/notice-item.js:296
 msgid ""
 "{user} moved folder {folderName} and {folderCount} other folder(s) in "
 "library {libraryName}."
-msgstr ""
+msgstr "{user} переместил папку {folderName} и {folderCount} других папок в библиотеке {libraryName}."
 
 #: frontend/src/components/common/notification.js:65
 #: frontend/src/components/common/notification.js:72
@@ -1358,7 +1358,7 @@ msgstr "Вы уверены, что хотите удалить %s ?"
 msgid ""
 "This folder has been shared to {user_amount} user(s) and {group_amount} "
 "group(s)."
-msgstr ""
+msgstr "Доступ к этой папке предоставлен {user_amount} пользователю(ям) и {group_amount} группе(ам)."
 
 #: frontend/src/components/dialog/delete-repo-dialog.js:57
 msgid ""
@@ -2246,7 +2246,7 @@ msgstr "Вы уверены, что хотите удалить {placeholder} ?"
 
 #: frontend/src/components/dialog/remove-webdav-password.js:37
 msgid "Remove WebDAV Password"
-msgstr ""
+msgstr "Удалить пароль WebDAV"
 
 #: frontend/src/components/dialog/rename-dialog.js:86
 #: frontend/src/components/dialog/rename-dirent.js:87
@@ -2362,7 +2362,7 @@ msgstr "Отправка нового пароля..."
 
 #: frontend/src/components/dialog/reset-webdav-password.js:73
 msgid "Reset WebDAV Password"
-msgstr ""
+msgstr "Сбросить пароль WebDAV"
 
 #: frontend/src/components/dialog/save-shared-dir-dialog.js:57
 #: frontend/src/components/dialog/save-shared-file-dialog.js:63
@@ -2407,7 +2407,7 @@ msgstr "Совет: по умолчанию 0 - без ограничений"
 
 #: frontend/src/components/dialog/set-webdav-password.js:73
 msgid "Set WebDAV Password"
-msgstr ""
+msgstr "Установить пароль WebDAV"
 
 #: frontend/src/components/dialog/share-admin-link.js:22
 msgid "The link is copied to the clipboard."
@@ -2588,11 +2588,11 @@ msgstr "Целое число, которое больше или равно 0."
 
 #: frontend/src/components/dialog/sysadmin-dialog/set-upload-download-rate-limit.js:51
 msgid "Set Upload Rate Limit"
-msgstr ""
+msgstr "Установить ограничение скорости загрузки"
 
 #: frontend/src/components/dialog/sysadmin-dialog/set-upload-download-rate-limit.js:51
 msgid "Set Download Rate Limit"
-msgstr ""
+msgstr "Установить ограничение скорости скачивания"
 
 #: frontend/src/components/dialog/sysadmin-dialog/sysadmin-add-institution-dialog.js:41
 msgid "Add institution"
@@ -3329,7 +3329,7 @@ msgstr "черновик"
 
 #: frontend/src/components/repo-monitored-icon.js:24
 msgid "You are watching file changes of this library."
-msgstr ""
+msgstr "Вы наблюдаете за изменениями файлов этой библиотеки."
 
 #: frontend/src/components/review-list-view/review-comments.js:109
 msgid "No comment yet."
@@ -3511,14 +3511,14 @@ msgstr "Сбросить пароль"
 #: frontend/src/pages/shared-libs/shared-libs.js:304
 #: frontend/src/pages/shared-libs/shared-libs.js:358
 msgid "Watch File Changes"
-msgstr ""
+msgstr "Наблюдать за изменениями файлов"
 
 #: frontend/src/components/shared-repo-list-view/shared-repo-list-item.js:328
 #: frontend/src/pages/my-libs/mylib-repo-menu.js:130
 #: frontend/src/pages/shared-libs/shared-libs.js:304
 #: frontend/src/pages/shared-libs/shared-libs.js:358
 msgid "Unwatch File Changes"
-msgstr ""
+msgstr "Не наблюдать за изменениями файлов"
 
 #: frontend/src/components/shared-repo-list-view/shared-repo-list-item.js:514
 #: frontend/src/pages/my-libs/mylib-repo-list-item.js:155
@@ -3806,24 +3806,24 @@ msgstr "Токен:"
 
 #: frontend/src/components/user-settings/webdav-password.js:93
 msgid "WebDAV Password"
-msgstr ""
+msgstr "WebDAV пароль"
 
 #: frontend/src/components/user-settings/webdav-password.js:94
 msgid "WebDAV URL:"
-msgstr ""
+msgstr "WebDAV URL:"
 
 #: frontend/src/components/user-settings/webdav-password.js:95
 msgid "WebDAV username:"
-msgstr ""
+msgstr "WebDAV имя пользователя:"
 
 #: frontend/src/components/user-settings/webdav-password.js:98
 #: frontend/src/components/user-settings/webdav-password.js:103
 msgid "WebDAV password:"
-msgstr ""
+msgstr "WebDAV пароль:"
 
 #: frontend/src/components/user-settings/webdav-password.js:98
 msgid "not set"
-msgstr ""
+msgstr "не задано"
 
 #: frontend/src/components/user-settings/webdav-password.js:99
 msgid "Set Password"
@@ -3831,7 +3831,7 @@ msgstr "Установить пароль"
 
 #: frontend/src/components/user-settings/webdav-password.js:105
 msgid "Remove Password"
-msgstr ""
+msgstr "Удалить пароль"
 
 #: frontend/src/components/wiki-markdown-viewer.js:216
 msgid "Last modified by"
@@ -4698,53 +4698,53 @@ msgstr "Обновление файла"
 #: frontend/src/pages/org-admin/org-saml-config.js:192
 #: frontend/src/pages/org-admin/side-panel.js:92
 msgid "SAML config"
-msgstr ""
+msgstr "SAML конфиг"
 
 #: frontend/src/pages/org-admin/org-saml-config.js:199
 msgid "Custom Login URL"
-msgstr ""
+msgstr "Пользовательский URL-адрес входа"
 
 #: frontend/src/pages/org-admin/org-saml-config.js:203
 msgid "Your custom login URL"
-msgstr ""
+msgstr "Ваш пользовательский URL-адрес входа"
 
 #: frontend/src/pages/org-admin/org-saml-config.js:208
 msgid ""
 "The custom part of the URL should be 6 to 20 characters, and can only "
 "contain alphanumeric characters and hyphens."
-msgstr ""
+msgstr "Пользовательская часть URL должна содержать от 6 до 20 символов и может содержать только буквенно-цифровые символы и дефисы."
 
 #: frontend/src/pages/org-admin/org-saml-config.js:220
 msgid "Manage SAML Config"
-msgstr ""
+msgstr "Управление конфигурацией SAML"
 
 #: frontend/src/pages/org-admin/org-saml-config.js:225
 msgid "App Federation Metadata URL"
-msgstr ""
+msgstr "URL-адрес метаданных федерации приложений"
 
 #: frontend/src/pages/org-admin/org-saml-config.js:230
 msgid "Login URL"
-msgstr ""
+msgstr "URL-адрес входа"
 
 #: frontend/src/pages/org-admin/org-saml-config.js:235
 msgid "Logout URL"
-msgstr ""
+msgstr "URL-адрес выхода"
 
 #: frontend/src/pages/org-admin/org-saml-config.js:240
 msgid "Valid Days (how long is our metadata valid)"
-msgstr ""
+msgstr "Срок действия (как долго действуют наши метаданные)"
 
 #: frontend/src/pages/org-admin/org-saml-config.js:258
 msgid "Upload Idp Files"
-msgstr ""
+msgstr "Загрузить idp файлы"
 
 #: frontend/src/pages/org-admin/org-saml-config.js:262
 msgid "IdP Certificate"
-msgstr ""
+msgstr "IdP сертификаты"
 
 #: frontend/src/pages/org-admin/org-saml-config.js:266
 msgid "Federation Metadata XML"
-msgstr ""
+msgstr "ХML метаданных федерации"
 
 #: frontend/src/pages/org-admin/org-user-item.js:59
 msgid "Resetting user's password, please wait for a moment."
@@ -5162,11 +5162,11 @@ msgstr "Удалить"
 
 #: frontend/src/pages/share-admin/share-links.js:313
 msgid "By expiration ascending"
-msgstr ""
+msgstr "По истечению срока по возрастанию"
 
 #: frontend/src/pages/share-admin/share-links.js:314
 msgid "By expiration descending"
-msgstr ""
+msgstr "По истечению срока по убыванию"
 
 #: frontend/src/pages/share-admin/upload-links.js:29
 msgid ""
@@ -5661,7 +5661,7 @@ msgstr "Установить справочный ID"
 
 #: frontend/src/pages/sys-admin/users/user-info.js:159
 msgid "Upload Rate Limit"
-msgstr ""
+msgstr "Ограничение скорости загрузки"
 
 #: frontend/src/pages/sys-admin/users/user-nav.js:18
 msgid "Shared Links"
