--- a/locale/zh_CN/LC_MESSAGES/djangojs.po
+++ b/locale/zh_CN/LC_MESSAGES/djangojs.po
@@ -9,6 +9,7 @@
 # ilearnit <helloworld.c@outlook.com>, 2018
 # Daniel Pan <daniel.pan@seafile.com>, 2015-2016
 # ilearnit <helloworld.c@outlook.com>, 2019
+# ilearnit <helloworld.c@outlook.com>, 2018-2019
 # imwhatiam <imwhatiam123@gmail.com>, 2015-2018,2021
 # llj <lingjun.li1@gmail.com>, 2017-2022
 # Daniel Pan <daniel.pan@seafile.com>, 2015
@@ -21,9 +22,9 @@ msgid ""
 msgstr ""
 "Project-Id-Version: seahub\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2023-02-15 12:05+0800\n"
+"POT-Creation-Date: 2023-02-15 17:52+0800\n"
 "PO-Revision-Date: 2015-05-09 05:28+0000\n"
-"Last-Translator: llj <lingjun.li1@gmail.com>, 2017-2022\n"
+"Last-Translator: 杨顺强 <ysq9207@126.com>, 2019\n"
 "Language-Team: Chinese (China) (http://www.transifex.com/haiwen/seahub/language/zh_CN/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
