--- a/locale/fi/LC_MESSAGES/django.po
+++ b/locale/fi/LC_MESSAGES/django.po
@@ -12,7 +12,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: seahub\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2023-02-15 17:52+0800\n"
+"POT-Creation-Date: 2023-02-15 18:18+0800\n"
 "PO-Revision-Date: 2013-10-25 07:03+0000\n"
 "Last-Translator: Teppo Sarjonen <teppo.sarjonen@gmail.com>, 2017-2018\n"
 "Language-Team: Finnish (http://www.transifex.com/haiwen/seahub/language/fi/)\n"
@@ -2173,7 +2173,7 @@ msgstr ""
 #: seahub/help/templates/help/drive_client_2.0_for_windows_10.html:51
 msgid ""
 "The \"SeaDrive\" shortcut in Windows Explorer won't disappear after you exit"
-" SeaDrive progrme or switch Seafile accounts in SeaDrive. This is an "
+" SeaDrive program or switch Seafile accounts in SeaDrive. This is an "
 "intended behavior. You don't need to remove them if you still need to access"
 " the account later."
 msgstr ""
@@ -2187,7 +2187,7 @@ msgstr ""
 #: seahub/help/templates/help/drive_client_2.0_for_windows_10.html:53
 msgid ""
 "You can usually remove those shortcuts by uninstalling SeaDrive program and "
-"choose \"Remove account information\" in the promt dialog."
+"choose \"Remove account information\" in the prompt dialog."
 msgstr ""
 
 #: seahub/help/templates/help/drive_client_2.0_for_windows_10.html:54
@@ -5215,10 +5215,6 @@ msgstr "Aloita"
 #: seahub/templates/view_shared_upload_link.html:227
 msgid "Network error"
 msgstr "Verkkovirhe"
-
-#: seahub/templates/wiki/wiki.html:25
-msgid "Last modified by"
-msgstr ""
 
 #: seahub/thumbnail/views.py:45 seahub/thumbnail/views.py:172
 #: seahub/views/__init__.py:601
